--- a/style.css
+++ b/style.css
@@ -5,6 +5,13 @@
     font-family: 'Martian Mono', monospace;
 }
 
+body {
+    background-image: url(https://i.pinimg.com/originals/94/8e/ec/948eec7a19c083b16b9e664c42beac23.jpg);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
 /* MAIN STYLE */
 .container {
     width: 70vw;
@@ -17,25 +24,21 @@
     display: flex;
     justify-content: center;
     border: 1px solid black;
-    background-color: rgba(21, 15, 129, 0.7);
+    background-color: rgba(21, 15, 129, 0.5);
 }
 
 .imgList, .imgBox, .miniatures {
     height: 100%;
 }
 
+/* images style */
 .imgList {
     width: 100%;
 }
 
-.miniatures {
-    width: 20%;
-    background-color: gray;
-    position: relative;
-}
-
 .imgBox {
     display: none;
+    position: relative;
 }
 
 .image {
@@ -46,6 +49,33 @@
 
 .show {
     display: block;
+}
+
+/* text image style */
+.resume {
+    position: absolute;
+    width: 100%;
+    bottom: 10px;
+    text-align: start;
+    padding: 4px;
+    font-size: 11px;
+    color: white;
+    background-color: rgba(51, 51, 51, 0.7);
+}
+
+.resume h4 {
+   margin-bottom: 8px;
+}
+
+/* button style */
+#prev {
+    bottom: 8px;
+    rotate: -90deg;
+}
+
+#next {
+    top: 8px;
+    rotate: -90deg;
 }
 
 .arrow {
@@ -63,14 +93,11 @@
     background-color: rgba(255, 255, 255, 0.5);
 }
 
-#prev {
-    bottom: 8px;
-    rotate: -90deg;
-}
-
-#next {
-    top: 8px;
-    rotate: -90deg;
+/* miniature style */
+.miniatures {
+    width: 20%;
+    background-color: gray;
+    position: relative;
 }
 
 .min-content {
